changed font on header

--- a/tailwind.config.css
+++ b/tailwind.config.css
@@ -7,6 +7,8 @@
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
 
+@import url('http://fonts.googleapis.com/css2?family=Fugaz+One');
+
 *,
 ::before,
 ::after {
